Add If-Modified-Since header